--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PALAZZO MOLTENI TOKYO | Virtual Tour Suite</title>
@@ -78,11 +77,11 @@
         }
     </style>
 </head>
-<body id="app-body">
+<body id="app-body" class="pinning-mode-active">
 
 <div id="ui-mode-toggle">
-    <button id="mode-view" class="active" onclick="changeAppMode('view')">VIEW</button>
-    <button id="mode-edit" onclick="changeAppMode('edit')">DESIGNER</button>
+    <button id="mode-view" class="" onclick="changeAppMode('view')">VIEW</button>
+    <button id="mode-edit" onclick="changeAppMode('edit')" class="active">DESIGNER</button>
 </div>
 
 <header>
@@ -93,20 +92,20 @@
 <div class="nav-arrow arrow-left" onclick="navigateArea(-1)"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg></div>
 <div class="nav-arrow arrow-right" onclick="navigateArea(1)"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg></div>
 
-<div id="admin-panel">
+<div id="admin-panel" class="open">
     <div style="font-weight:900; letter-spacing:2px; font-size:14px; margin-bottom:40px; border-bottom:2px solid #000; padding-bottom:15px; text-transform:uppercase;">Administration</div>
     <div class="admin-section">
         <span class="admin-label">01. Area Management</span>
         <input type="text" id="new-area-name" placeholder="Area Name">
-        <button class="btn btn-black" onclick="handleCreateArea()">Add Area to <span id="admin-f-label">1F</span></button>
+        <button class="btn btn-black" onclick="handleCreateArea()">Add Area to <span id="admin-f-label">B1F</span></button>
     </div>
-    <div id="edit-tools" style="display:none;">
+    <div id="edit-tools" style="display: block;">
         <div class="admin-section">
             <span class="admin-label">02. Media Content</span>
             <input type="file" id="file-input" accept="image/*">
             <input type="text" id="manual-url" placeholder="Paste Image URL" onchange="updateImageManual(this.value)">
             <span class="admin-label" style="margin-top:25px;">03. Interaction Settings</span>
-            <div id="pin-switch-btn" class="pin-switch" onclick="handlePinToggle()">Placement Mode: OFF</div>
+            <div id="pin-switch-btn" class="pin-switch active" onclick="handlePinToggle()">Placement Mode: ACTIVE</div>
             <select id="marker-type">
                 <option value="product">Product Link (◎)</option>
                 <option value="detail">Interior Detail (▣)</option>
@@ -122,19 +121,35 @@
     <div style="max-width: 800px; margin: auto;">
         <h2 style="font-family: var(--bodoni);">Final Export</h2>
         <p style="font-size: 13px; color: #666;">Copy the code below, go to GitHub index.html, and replace EVERYTHING with this.</p>
-        <textarea id="export-text" readonly style="height: 400px; font-size: 10px;"></textarea>
+        <textarea id="export-text" readonly="" style="height: 400px; font-size: 10px;"></textarea>
         <button class="btn btn-black" onclick="document.getElementById('export-output').style.display='none'">Back to App</button>
     </div>
 </div>
 
 <div id="viewport" onclick="handleViewportClick(event)">
-    <div class="area-nav" id="area-nav"></div>
-    <div id="scene-display"></div>
+    <div class="area-nav" id="area-nav"><div class="area-item" id="nav-a1766734702128">A</div><div class="area-item active" id="nav-a1766734782946">B</div></div>
+    <div id="scene-display"><div class="scene-wrap" id="scene-stage"><img src="https://i.ibb.co/JjL08Z85/Tokyo-MGL0240-2025-HR-1.jpg">
+                <div class="mol-hs " style="top:69.6411194007844%; left:55.6687898089172%;" onclick="handlePinInteraction(event, 'p1766734808779')">
+                    <div class="edit-x" onclick="handleDeletePin(event,'p1766734808779')">×</div>
+                    <span class="mol-dot-outer"><span class="mol-dot-inner"></span></span>
+                    <a href="https://www.molteni.it/jp/all-products" target="_blank" class="mol-card" ontouchstart="">
+                        <strong>ALBERT</strong>
+                        <span>商品詳細はこちら &gt;</span>
+                    </a>
+                </div>
+                <div class="mol-hs " style="top:64.35669841644304%; left:21.0828025477707%;" onclick="handlePinInteraction(event, 'p1766734813196')">
+                    <div class="edit-x" onclick="handleDeletePin(event,'p1766734813196')">×</div>
+                    <span class="mol-dot-outer"><span class="mol-dot-inner"></span></span>
+                    <a href="https://www.molteni.it/jp/all-products" target="_blank" class="mol-card" ontouchstart="">
+                        <strong>SWAY</strong>
+                        <span>商品詳細はこちら &gt;</span>
+                    </a>
+                </div></div></div>
 </div>
 
 <footer>
-    <div class="floor-btn" onclick="handleFloorChange('B1F')" id="f-B1F"><span class="floor-num">B1</span><span class="floor-label">Basement</span></div>
-    <div class="floor-btn active" onclick="handleFloorChange('1F')" id="f-1F"><span class="floor-num">1F</span><span class="floor-label">Ground</span></div>
+    <div class="floor-btn active" onclick="handleFloorChange('B1F')" id="f-B1F"><span class="floor-num">B1</span><span class="floor-label">Basement</span></div>
+    <div class="floor-btn" onclick="handleFloorChange('1F')" id="f-1F"><span class="floor-num">1F</span><span class="floor-label">Ground</span></div>
     <div class="floor-btn" onclick="handleFloorChange('2F')" id="f-2F"><span class="floor-num">2F</span><span class="floor-label">Living</span></div>
     <div class="floor-btn" onclick="handleFloorChange('3F')" id="f-3F"><span class="floor-num">3F</span><span class="floor-label">Apartment</span></div>
 </footer>
@@ -144,7 +159,7 @@
     
     // --- 【超重要】ここがデータベースになります ---
     const DATA_ID = "pmt_master_v22";
-    let store = JSON.parse(localStorage.getItem(DATA_ID)) || { 'B1F':[], '1F':[], '2F':[], '3F':[] };
+    let store = {"B1F":[{"id":"a1766734702128","name":"A","img":"https://i.ibb.co/tMMctTzh/Tokyo-Palazzo-Molteni-03.jpg","pins":[{"id":"p1766734744429","x":55.47770700636943,"y":59.78210012699686,"title":"CINNAMON","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734749296","x":80.06369426751593,"y":70.53004478310272,"title":"MARTEEN","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734770297","x":24.14012738853503,"y":50.10360270035426,"title":"アート","link":"","sub":"アート","type":"detail"},{"id":"p1766734776811","x":60.318471337579616,"y":45.3445625292427,"title":"アート","link":"","sub":"アート","type":"detail"}]},{"id":"a1766734782946","name":"B","img":"https://i.ibb.co/JjL08Z85/Tokyo-MGL0240-2025-HR-1.jpg","pins":[{"id":"p1766734808779","x":55.6687898089172,"y":69.6411194007844,"title":"ALBERT","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734813196","x":21.0828025477707,"y":64.35669841644304,"title":"SWAY","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"}]}],"1F":[],"2F":[],"3F":[{"id":"a1766734621445","name":"A","img":"https://i.ibb.co/nMKmfKdM/682ee5105f756-Molteni-C-Palazzo-Molteni-Tokyo-02.jpg","pins":[{"id":"p1766734648580","x":35.159235668789805,"y":39.91507430997877,"title":"ARIAL","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734655028","x":57.5796178343949,"y":38.47133757961784,"title":"505up","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734663812","x":30.19108280254777,"y":82.63269639065818,"title":"AUGUSTO","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734680242","x":15.031847133757962,"y":45.35031847133758,"title":"エコスマート","link":"","sub":"エコスマート","type":"detail"},{"id":"p1766734684899","x":82.4203821656051,"y":45.605095541401276,"title":"アート","link":"","sub":"アート","type":"detail"}]}]};
     // ---------------------------------------------
 
     let floor = '1F';
@@ -353,5 +368,6 @@
         exportText.select();
     }
 </script>
-</body>
-</html>
+
+
+</body></html>
