--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 </div>
 
-<div id="export-output">
+<div id="export-output" style="display: none;">
     <div style="max-width: 800px; margin: auto;">
         <h2 style="font-family: var(--bodoni);">Final Export</h2>
         <p style="font-size: 13px; color: #666;">Copy the code below, go to GitHub index.html, and replace EVERYTHING with this.</p>
