--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .floor-btn { flex: 1; color: #fff; text-align: center; padding: 18px 0; opacity: 0.35; cursor: pointer; border: none; background: none; font-family: var(--main-font); }
         .floor-btn.active { opacity: 1; }
         .floor-num { display: block; font-family: var(--main-font); font-size: 24px; font-weight: 600; }
-        .floor-label { display: block; font-size: 8px; text-transform: uppercase; letter-spacing: 0.1em; color: #888; }
+        .floor-label { display: block; font-size: 8px; text-transform: uppercase; letter-spacing: 0.1em; color: #888; font-family: var(--main-font); }
 
         /* --- VIEWPORT (120% BREAKOUT) --- */
         #viewport { width: 100%; height: 100%; padding: 85px 0 85px 0; box-sizing: border-box; overflow-y: auto; overflow-x: hidden; position: relative; z-index: 100; transition: 0.5s; touch-action: pan-y; }
@@ -35,7 +35,7 @@
 
         .area-nav { display: flex; gap: 35px; padding: 25px 40px; overflow-x: auto; background: #fff; border-bottom: 1px solid #f2f2f2; scrollbar-width: none; position: sticky; top: 0; z-index: 500; }
         .area-nav::-webkit-scrollbar { display: none; }
-        .area-item { font-size: 13px; text-transform: uppercase; letter-spacing: 0.2em; color: var(--grey); cursor: pointer; white-space: nowrap; padding-bottom: 8px; border-bottom: 2px solid transparent; transition: 0.3s; }
+        .area-item { font-family: var(--main-font); font-size: 13px; text-transform: uppercase; letter-spacing: 0.2em; color: var(--grey); cursor: pointer; white-space: nowrap; padding-bottom: 8px; border-bottom: 2px solid transparent; transition: 0.3s; }
         .area-item.active { color: #000; font-weight: bold; border-bottom-color: #000; }
 
         .nav-arrow { position: fixed; top: 50%; transform: translateY(-50%); width: 54px; height: 54px; display: flex; align-items: center; justify-content: center; z-index: 1500; cursor: pointer; color: rgba(0,0,0,0.5); background: rgba(255,255,255,0.4); backdrop-filter: blur(5px); border-radius: 50%; transition: 0.3s; pointer-events: auto; }
@@ -45,7 +45,7 @@
         .mol-breakout-wrap { width: 120% !important; margin-left: -10% !important; position: relative; left: 0; text-align: center; line-height: 0; font-size: 0; }
         .mol-breakout-wrap img { width: 100%; height: auto; display: block; border-radius: 0; border: none; }
 
-        /* PIN DESIGN */
+        /* PIN DESIGN (◎) */
         .mol-hs { position: absolute; transform: translate(-50%, -50%); text-decoration: none; z-index: 10; display: block; }
         .mol-dot-outer { width: 12px; height: 12px; background: rgba(255,255,255,0.2); border: 1px solid #fff; border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: 0.3s; }
         .mol-dot-inner { width: 4px; height: 4px; border: 1px solid #fff; border-radius: 50%; }
@@ -78,8 +78,8 @@
             #ui-mode-toggle, .nav-arrow, #admin-panel { display: none !important; }
             .location { display: block; font-size: 7px; letter-spacing: 0.3em; }
             .brand-title { font-size: 18px; letter-spacing: 0.12em; font-weight: 600; }
-            .mol-breakout-wrap { width: 100% !important; margin: 0 !important; }
-            .mol-breakout-wrap img { width: 100% !important; height: auto !important; max-width: 100vw !important; }
+            .scene-wrap { width: 100% !important; margin: 0 !important; }
+            .scene-wrap img { width: 100% !important; height: auto !important; max-width: 100vw !important; }
         }
     </style>
 </head>
@@ -117,17 +117,16 @@
                 <option value="detail">Interior Detail (▣)</option>
             </select>
         </div>
-        <button class="btn btn-accent" onclick="commitChanges()">Save Progress</button>
-        <button class="btn btn-black" style="margin-top:10px;" onclick="exportPermanentHTML()">Export for GitHub</button>
-        <button class="btn" style="margin-top:40px; font-size:9px; color:red;" onclick="handleDeleteArea()">Remove This Area</button>
+        <button class="btn btn-accent" onclick="commitChanges()">1. Save Progress</button>
+        <button class="btn btn-black" style="margin-top:10px;" onclick="exportPermanentHTML()">2. Export for GitHub</button>
+        <button class="btn" style="margin-top:40px; font-size:9px; color:red;" onclick="handleDeleteArea()">Remove Entire Area</button>
     </div>
 </div>
 
 <div id="export-output">
     <div style="max-width: 800px; margin: auto;">
         <h2 style="font-family: var(--main-font); font-weight: 600;">Final Export</h2>
-        <p style="font-size: 13px; color: #666;">Copy everything below and paste into GitHub index.html.</p>
-        <textarea id="export-text" readonly style="height: 400px; font-size: 10px; width:100%;"></textarea>
+        <textarea id="export-text" readonly style="height: 400px; font-size: 10px; width: 100%;"></textarea>
         <button class="btn btn-black" onclick="document.getElementById('export-output').style.display='none'">Back to App</button>
     </div>
 </div>
@@ -145,135 +144,108 @@
 </footer>
 
 <script>
-    const API_KEY = "ddb8687d0558d57aad3e6155ccaab2e2";
-    const DB_NAME = "pmt_master_v31";
-    
-    // --- 【永久保存データ】 ---
-    let store = JSON.parse(localStorage.getItem(DB_NAME)) || {"B1F":[{"id":"a1766734702128","name":"A","img":"https://i.ibb.co/tMMctTzh/Tokyo-Palazzo-Molteni-03.jpg","pins":[{"id":"p1766734744429","x":55.48,"y":59.78,"title":"CINNAMON","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734749296","x":80.06,"y":70.53,"title":"MARTEEN","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734770297","x":24.14,"y":50.1,"title":"アート","link":"","sub":"アート","type":"detail"},{"id":"p1766734776811","x":60.32,"y":45.34,"title":"アート","link":"","sub":"アート","type":"detail"}]},{"id":"a1766734782946","name":"B","img":"https://i.ibb.co/JjL08Z85/Tokyo-MGL0240-2025-HR-1.jpg","pins":[{"id":"p1766734808779","x":55.67,"y":69.64,"title":"ALBERT","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734813196","x":21.08,"y":64.36,"title":"SWAY","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"}]}],"1F":[],"2F":[],"3F":[{"id":"a1766734621445","name":"A","img":"https://i.ibb.co/nMKmfKdM/682ee5105f756-Molteni-C-Palazzo-Molteni-Tokyo-02.jpg","pins":[{"id":"p1766734648580","x":35.16,"y":39.92,"title":"ARIAL","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734655028","x":57.58,"y":38.47,"title":"505up","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734663812","x":30.19,"y":82.63,"title":"AUGUSTO","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734680242","x":15.03,"y":45.35,"title":"エコスマート","link":"","sub":"エコスマート","type":"detail"},{"id":"p1766734684899","x":82.42,"y":45.61,"title":"アート","link":"","sub":"アート","type":"detail"}]},{"id":"a1766739087337","name":"B","img":"https://i.ibb.co/0pWmGHTM/Tokyo-MGL0117-2025-HR.jpg","pins":[]}]};
+/* --- APP LOGIC v32 --- */
+const API_KEY = "ddb8687d0558d57aad3e6155ccaab2e2";
+const DB_NAME = "pmt_master_v32";
 
-    let floor = '1F';
-    let areaId = null;
-    let mode = 'view';
-    let isPinning = false;
-    let touchX = 0;
+// --- 封入されたデータ ---
+let store = {"B1F":[{"id":"a1766734702128","name":"A","img":"https://i.ibb.co/tMMctTzh/Tokyo-Palazzo-Molteni-03.jpg","pins":[{"id":"p1766734744429","x":55.48,"y":59.78,"title":"CINNAMON","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734749296","x":80.06,"y":70.53,"title":"MARTEEN","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734770297","x":24.14,"y":50.1,"title":"アート","link":"","sub":"アート","type":"detail"},{"id":"p1766734776811","x":60.32,"y":45.34,"title":"アート","link":"","sub":"アート","type":"detail"}]},{"id":"a1766734782946","name":"B","img":"https://i.ibb.co/JjL08Z85/Tokyo-MGL0240-2025-HR-1.jpg","pins":[{"id":"p1766734808779","x":55.67,"y":69.64,"title":"ALBERT","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734813196","x":21.08,"y":64.36,"title":"SWAY","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"}]}],"1F":[],"2F":[],"3F":[{"id":"a1766734621445","name":"A","img":"https://i.ibb.co/nMKmfKdM/682ee5105f756-Molteni-C-Palazzo-Molteni-Tokyo-02.jpg","pins":[{"id":"p1766734648580","x":35.16,"y":39.92,"title":"ARIAL","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734655028","x":57.58,"y":38.47,"title":"505up","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734663812","x":30.19,"y":82.63,"title":"AUGUSTO","link":"https://www.molteni.it/jp/all-products","sub":"商品詳細はこちら >","type":"product"},{"id":"p1766734680242","x":15.03,"y":45.35,"title":"エコスマート","link":"","sub":"エコスマート","type":"detail"},{"id":"p1766734684899","x":82.42,"y":45.61,"title":"アート","link":"","sub":"アート","type":"detail"}]}]};
 
-    window.onload = () => {
-        if (window.innerWidth <= 768) { mode = 'view'; }
-        handleFloorChange('1F');
-    };
+let floor = '1F';
+let areaId = null;
+let mode = 'view';
+let isPinning = false;
+let touchX = 0;
 
-    function changeAppMode(m) {
-        if (window.innerWidth <= 768) return;
-        mode = m; isPinning = false;
-        document.getElementById('mode-view').className = (m === 'view' ? 'active' : '');
-        document.getElementById('mode-edit').className = (m === 'edit' ? 'active' : '');
-        document.getElementById('admin-panel').classList.toggle('open', m === 'edit');
-        document.body.classList.remove('pinning-mode-active');
-        if (areaId && mode === 'edit') document.getElementById('edit-tools').style.display = 'block';
-        renderActiveScene();
+// グローバル関数定義
+window.changeAppMode = function(m) {
+    if (window.innerWidth <= 768) return;
+    mode = m; isPinning = false;
+    document.getElementById('mode-view').className = (m === 'view' ? 'active' : '');
+    document.getElementById('mode-edit').className = (m === 'edit' ? 'active' : '');
+    document.getElementById('admin-panel').classList.toggle('open', m === 'edit');
+    document.body.classList.remove('pinning-mode-active');
+    if (areaId && mode === 'edit') document.getElementById('edit-tools').style.display = 'block';
+    renderActiveScene();
+};
+
+window.handleViewportClick = function(e) {
+    if (mode === 'edit' && !isPinning) {
+        if (e.target.closest('.area-nav') || e.target.closest('.mol-hs')) return;
+        window.changeAppMode('view'); return;
     }
-
-    function handleViewportClick(e) {
-        if (mode === 'edit' && !isPinning) {
-            if (e.target.closest('.area-nav') || e.target.closest('.mol-hs')) return;
-            changeAppMode('view'); return;
-        }
-        if (mode === 'edit' && isPinning) {
-            const stage = document.getElementById('scene-stage');
-            if (stage && e.target.closest('#scene-stage') && !e.target.closest('.mol-hs')) {
-                const r = stage.getBoundingClientRect();
-                addPinAt(((e.clientX - r.left)/r.width)*100, ((e.clientY - r.top)/r.height)*100);
-            }
+    if (mode === 'edit' && isPinning) {
+        const stage = document.getElementById('scene-stage');
+        if (stage && e.target.closest('#scene-stage') && !e.target.closest('.mol-hs')) {
+            const r = stage.getBoundingClientRect();
+            addPinAt(((e.clientX - r.left)/r.width)*100, ((e.clientY - r.top)/r.height)*100);
         }
     }
+};
 
-    function handlePinToggle() {
-        isPinning = !isPinning;
-        const btn = document.getElementById('pin-switch-btn');
-        btn.classList.toggle('active', isPinning);
-        btn.innerText = isPinning ? "Placement Mode: ACTIVE" : "Placement Mode: OFF";
-        document.body.classList.toggle('pinning-mode-active', isPinning);
+window.handlePinToggle = function() {
+    isPinning = !isPinning;
+    const btn = document.getElementById('pin-switch-btn');
+    btn.classList.toggle('active', isPinning);
+    btn.innerText = isPinning ? "Placement Mode: ACTIVE" : "Placement Mode: OFF";
+    document.body.classList.toggle('pinning-mode-active', isPinning);
+};
+
+window.handleFloorChange = function(f) {
+    floor = f;
+    document.querySelectorAll('.floor-btn').forEach(el => el.classList.remove('active'));
+    const btn = document.getElementById('f-'+f); if(btn) btn.classList.add('active');
+    document.getElementById('admin-f-label').innerText = f;
+    renderNavList();
+};
+
+window.navigateArea = function(dir) {
+    if(mode === 'edit') return;
+    const list = store[floor]; const idx = list.findIndex(x => x.id === areaId);
+    const nextIdx = idx + dir;
+    if (nextIdx >= 0 && nextIdx < list.length) selectActiveArea(list[nextIdx].id);
+};
+
+// 内部関数
+function renderNavList() {
+    const nav = document.getElementById('area-nav');
+    nav.innerHTML = '';
+    const list = store[floor];
+    if(list.length === 0) {
+        document.getElementById('scene-display').innerHTML = '<div style="padding:100px; text-align:center; color:#ccc;">Select Floor to Begin.</div>';
+        document.getElementById('edit-tools').style.display = 'none';
+        return;
     }
-
-    function handleFloorChange(f) {
-        floor = f;
-        document.querySelectorAll('.floor-btn').forEach(el => el.classList.remove('active'));
-        const btn = document.getElementById('f-'+f); if(btn) btn.classList.add('active');
-        document.getElementById('admin-f-label').innerText = f;
-        renderNavList();
-    }
-
-    function renderNavList() {
-        const nav = document.getElementById('area-nav');
-        nav.innerHTML = '';
-        const list = store[floor];
-        if(list.length === 0) {
-            document.getElementById('scene-display').innerHTML = '<div style="padding:100px; text-align:center; color:#ccc;">Experience Molteni Home...</div>';
-            document.getElementById('edit-tools').style.display = 'none';
-            return;
-        }
-        list.forEach(a => {
-            const el = document.createElement('div');
-            el.className = `area-item ${a.id === areaId ? 'active' : ''}`;
-            el.id = `nav-${a.id}`;
-            el.innerText = a.name;
-            el.onclick = (e) => { e.stopPropagation(); selectActiveArea(a.id); };
-            nav.appendChild(el);
-        });
-        if(!areaId || !list.find(x => x.id === areaId)) selectActiveArea(list[0].id);
-        else selectAreaNav(areaId);
-    }
-
-    function selectActiveArea(id) {
-        areaId = id;
-        const a = store[floor].find(x => x.id === id);
-        if(!a) return;
-        document.querySelectorAll('.area-item').forEach(el => el.classList.toggle('active', el.id === `nav-${id}`));
-        renderActiveScene();
-        if(mode === 'edit') document.getElementById('edit-tools').style.display = 'block';
-        document.getElementById('manual-url').value = a.img || '';
-        selectAreaNav(id);
-    }
-
-    function selectAreaNav(id) {
-        const activeNav = document.getElementById(`nav-${id}`);
-        if(activeNav) activeNav.scrollIntoView({ behavior: 'smooth', inline: 'center' });
-    }
-
-    function renderActiveScene() {
-        const a = store[floor].find(x => x.id === areaId);
-        if(!a) return;
-        let pinsHTML = '';
-        a.pins.forEach(p => {
-            const isP = p.type === 'product';
-            const linkAttrs = isP ? `href="${p.link}" target="_blank" rel="noopener noreferrer"` : '';
-            const xBtn = (mode === 'edit') ? `<div class="edit-x" onclick="handleDeletePin(event,'${p.id}')">×</div>` : '';
-            pinsHTML += `<div class="mol-hs ${p.type==='detail'?'type-detail':''}" style="top:${p.y}%; left:${p.x}%;" onclick="handlePinInteraction(event, '${p.id}')">${xBtn}<span class="mol-dot-outer"><span class="mol-dot-inner"></span></span><a ${linkAttrs} class="mol-card" ontouchstart=""><strong>${p.title}</strong><span>${p.sub}</span></a></div>`;
-        });
-        const container = document.getElementById('scene-display');
-        container.innerHTML = `<div class="scene-wrap" id="scene-stage"><img src="${a.img || 'https://i.ibb.co/v4m86fS/placeholder.jpg'}">${pinsHTML}</div>`;
-    }
-
-    function navigateArea(dir) {
-        if(mode === 'edit') return;
-        const list = store[floor]; const idx = list.findIndex(x => x.id === areaId);
-        const nextIdx = idx + dir;
-        if (nextIdx >= 0 && nextIdx < list.length) selectActiveArea(list[nextIdx].id);
-    }
-
-    document.getElementById('viewport').addEventListener('touchstart', e => { touchX = e.touches[0].screenX; });
-    document.getElementById('viewport').addEventListener('touchend', e => {
-        if(mode === 'edit') return;
-        const diff = e.changedTouches[0].screenX - touchX;
-        if(Math.abs(diff) > 80) navigateArea(diff > 0 ? -1 : 1);
+    list.forEach(a => {
+        const el = document.createElement('div');
+        el.className = `area-item ${a.id === areaId ? 'active' : ''}`;
+        el.id = `nav-${a.id}`;
+        el.innerText = a.name;
+        el.onclick = (e) => { e.stopPropagation(); selectActiveArea(a.id); };
+        nav.appendChild(el);
     });
+    if(!areaId || !list.find(x => x.id === areaId)) selectActiveArea(list[0].id);
+    else selectActiveArea(areaId);
+}
 
-    function handlePinInteraction(e, pid) {
-        if (mode === 'edit') {
-            e.stopPropagation();
-            const p = store[floor].find(x => x.id === areaId).pins.find(x => x.id === pid);
-            const nt = prompt("Update Title:", p.title);
-            if (nt) {
-                p.title = nt;
-                if(p.type === 'product') p.link = prompt("URL:", p.link) || p.link;
-                else p.sub = prompt("Desc:",
+function selectActiveArea(id) {
+    areaId = id;
+    const a = store[floor].find(x => x.id === id);
+    if(!a) return;
+    document.querySelectorAll('.area-item').forEach(el => el.classList.toggle('active', el.id === `nav-${id}`));
+    renderActiveScene();
+    if(mode === 'edit') document.getElementById('edit-tools').style.display = 'block';
+    document.getElementById('manual-url').value = a.img || '';
+    const activeNav = document.getElementById(`nav-${id}`);
+    if(activeNav) activeNav.scrollIntoView({ behavior: 'smooth', inline: 'center' });
+}
+
+function renderActiveScene() {
+    const a = store[floor].find(x => x.id === areaId);
+    if(!a) return;
+    let pinsHTML = '';
+    a.pins.forEach(p => {
+        const isP = p.type === 'product';
+        const linkAttrs = isP ? `href="${p.link}" target="_blank" rel="noopener noreferrer"` : '';
+        const xBtn = (mode === 'edit') ? `<div class="edit-x" onclick="handleDeletePin(event,'${p.id}')">×</div>` : '';
+        pinsHTML += `<d
